--- a/package.json
+++ b/package.json
@@ -2,15 +2,22 @@
   "name": "Zuckbook",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+		"animate.css": "^4.1.1",
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo": "^8.0.4",
+    "@hotwired/turbo-rails": "^8.0.16",
+    "@popperjs/core": "^2.11.8",
+    "@rails/actioncable": "^7.1.3",
     "bootstrap": "^5.3.2",
-    "esbuild": "^0.25.5"
+    "esbuild": "^0.25.5",
+    "moment": "^2.30.1"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
-    "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+    "build:css": "sass ./app/assets/stylesheets/application.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules",
+    "build:all": "npm run build && npm run build:css"
   },
   "devDependencies": {
     "sass": "^1.89.2"
