--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "esbuild": "^0.25.5",
     "moment": "^2.30.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.{js,jsx} --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
