--- a/package.json
+++ b/package.json
@@ -15,14 +15,20 @@
     "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+		"lucide-react": "^0.525.0"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.{js,jsx} --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
-    "build:css": "sass ./app/assets/stylesheets/application.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules",
-    "build:all": "npm run build && npm run build:css"
+    "build": "bunx esbuild app/javascript/*.{js,jsx} --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
+    "build:css": "bunx tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify",
+    "build:all": "bun run build && bun run build:css"
   },
   "devDependencies": {
-    "sass": "^1.89.2"
+    "@tailwindcss/cli": "latest",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "latest",
+    "tw-animate-css": "^1.3.5"
   }
 }
