--- a/package.json
+++ b/package.json
@@ -8,26 +8,23 @@
     "@hotwired/turbo": "^8.0.4",
     "@hotwired/turbo-rails": "^8.0.16",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/themes": "^3.2.1",
     "@rails/actioncable": "^7.1.3",
-    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.2",
     "esbuild": "^0.25.5",
     "moment": "^2.30.1",
+    "radix-ui": "^1.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3",
-		"lucide-react": "^0.525.0"
+    "react-router-dom": "^7.6.3"
   },
   "scripts": {
     "build": "bunx esbuild app/javascript/*.{js,jsx} --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
-    "build:css": "bunx tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify",
+    "build:css": "bunx tailwindcss -c ./tailwind.config.js -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify",
     "build:all": "bun run build && bun run build:css"
   },
   "devDependencies": {
     "@tailwindcss/cli": "latest",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^3.3.1",
     "tailwindcss": "latest",
     "tw-animate-css": "^1.3.5"
   }
