--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@hotwired/turbo": "^8.0.4",
     "@hotwired/turbo-rails": "^8.0.16",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
     "@rails/actioncable": "^7.1.3",
+    "@tanstack/react-query": "^5.82.0",
+    "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "esbuild": "^0.25.5",
     "moment": "^2.30.1",
